# notebooklm-skill

./: .gitignore  LICENSE  QUICK_START.md  README.md  SKILL.md  nlm-cdp.sh  pyproject.toml
conda-output/: index.html
conda-output/noarch/: index.html
conda-output/osx-arm64/: index.html
conda-recipe/: meta.yaml
scripts/: notebooklm.py
src/notebooklm_cli/: __init__.py  cli.py
