[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-cli"
version = "1.0.0"
description = "CLI tool for automating Google NotebookLM - search sources, chat, generate podcasts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Superionichuan"}
]
keywords = ["notebooklm", "google", "automation", "cli", "playwright", "ai", "notebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Superionichuan/notebooklm-skill"
Repository = "https://github.com/Superionichuan/notebooklm-skill"
Issues = "https://github.com/Superionichuan/notebooklm-skill/issues"

[project.scripts]
nlm = "notebooklm_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md"]
